// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should accept @return as a synonym of @returns 1`] = `
[
  {
    "docblock": "
Baz method with foo param

@public
@return {string} test
",
    "returns": {
      "description": "test",
      "title": "return",
      "type": {
        "name": "string",
        "type": "NameExpression",
      },
    },
    "tags": {
      "public": [
        {
          "description": null,
          "title": "public",
          "type": null,
        },
      ],
    },
  },
]
`;

exports[`should get method info from docblock and merge it 1`] = `
[
  {
    "docblock": "
Baz method with foo param

@public
@returns {string} test
",
    "returns": {
      "description": "test",
      "title": "returns",
      "type": {
        "name": "string",
        "type": "NameExpression",
      },
    },
    "tags": {
      "public": [
        {
          "description": null,
          "title": "public",
          "type": null,
        },
      ],
    },
  },
]
`;

exports[`should get method params info from docblock and merge it with passed method info 1`] = `
[
  {
    "docblock": "
Foo method with baz param

@public
@param {string} [baz=bar]
@arg {string} foo param described with @arg tag
@argument {string} test param described with @argument tag
@returns {string} test
",
    "params": [
      {
        "default": "bar",
        "description": null,
        "name": "baz",
        "title": "param",
        "type": {
          "expression": {
            "name": "string",
            "type": "NameExpression",
          },
          "type": "OptionalType",
        },
      },
      {
        "description": "param described with @arg tag",
        "name": "foo",
        "title": "arg",
        "type": {
          "name": "string",
          "type": "NameExpression",
        },
      },
      {
        "description": "param described with @argument tag",
        "name": "test",
        "title": "argument",
        "type": {
          "name": "string",
          "type": "NameExpression",
        },
      },
    ],
    "returns": {
      "description": "test",
      "title": "returns",
      "type": {
        "name": "string",
        "type": "NameExpression",
      },
    },
    "tags": {
      "public": [
        {
          "description": null,
          "title": "public",
          "type": null,
        },
      ],
    },
  },
]
`;

exports[`should highlight code in description (fenced code block) 1`] = `
{
  "description": "The only true button.

\`\`\`js
<span class="token function">alert</span><span class="token punctuation">(</span><span class="token string">'Hello world'</span><span class="token punctuation">)</span><span class="token punctuation">;</span>
\`\`\`
",
  "displayName": "",
  "doclets": {},
  "methods": [],
  "tags": {},
}
`;

exports[`should not crash when using doctrine to parse a default prop that isn't in the props list 1`] = `
{
  "description": "The only true button.
",
  "displayName": "",
  "doclets": {},
  "methods": [],
  "props": {
    "crash": {
      "description": "",
      "tags": {},
    },
  },
  "tags": {},
}
`;

exports[`should not return an import marker for the @example doclet when the file does not exist 1`] = `
{
  "description": "The only true button.
",
  "displayName": "Button",
  "doclets": {
    "example": "example.md
",
  },
  "methods": [],
  "tags": {
    "example": [
      {
        "description": "example.md",
        "title": "example",
      },
    ],
  },
}
`;

exports[`should remove non-public methods 1`] = `
{
  "displayName": "Button",
  "doclets": {},
  "methods": [
    {
      "docblock": "Public method.
@public",
      "tags": {
        "public": [
          {
            "description": null,
            "title": "public",
          },
        ],
      },
    },
  ],
}
`;

exports[`should return an import marker for the @example doclet 1`] = `
{
  "description": "The only true button.
",
  "displayName": "Button",
  "doclets": {},
  "example": {
    "__rsgDefault": true,
    "__rsgImport": "virtual:rsg-examples?file=~/test/components/Placeholder/examples.md&rsg",
  },
  "methods": [],
  "tags": {
    "example": [
      {
        "description": "../../../../test/components/Placeholder/examples.md",
        "title": "example",
      },
    ],
  },
}
`;

exports[`should return an object for props 1`] = `
{
  "description": "The only true button.
",
  "displayName": "Button",
  "doclets": {},
  "methods": [],
  "props": {
    "children": {
      "description": "Button label.",
      "required": true,
      "tags": {},
      "type": {
        "name": "object",
      },
    },
    "color": {
      "description": "",
      "required": false,
      "tags": {},
      "type": {
        "name": "string",
      },
    },
  },
  "tags": {},
}
`;

exports[`should return an object for props with doclets 1`] = `
{
  "description": "The only true button.
",
  "displayName": "Button",
  "doclets": {
    "bar": "Bar
",
    "foo": "Foo",
  },
  "methods": [],
  "tags": {
    "bar": [
      {
        "description": "Bar",
        "title": "bar",
      },
    ],
    "foo": [
      {
        "description": "Foo",
        "title": "foo",
      },
    ],
  },
}
`;

exports[`should return an object for props without description 1`] = `
{
  "displayName": "Button",
  "doclets": {},
  "methods": [],
  "props": {
    "children": {
      "description": "Button label.",
      "required": true,
      "tags": {},
      "type": {
        "name": "object",
      },
    },
  },
}
`;
